fix: resolve Gecko 3D flickering by removing transform-style: preserve-3d from nested .perspective

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -193,9 +193,6 @@ $cube-transition-duration: 500ms;
     display: block;
     position: absolute;
     height: var(--threed-height);
-    transform-style: preserve-3d;
-    perspective: inherit;
-    perspective-origin: inherit;
     background-color: inherit;
     width: 100%;
     left: 0;
@@ -1221,13 +1218,13 @@ ul.social {
 .content-cube {
     position: relative;
     transform-style: preserve-3d;
-    backface-visibility: hidden;
 
     > .face {
         width: 100%;
         height: 100%;
         position: absolute;
         transform-style: preserve-3d;
+        backface-visibility: hidden;
         transition:
             transform $cube-transition-duration ease-in-out,
             filter $cube-transition-duration ease-in-out;
@@ -1327,14 +1324,16 @@ ul.social {
 }
 
 .perspective {
-    transform-style: preserve-3d;
-
     &.threed-top {
         @extend %threed-side-top;
+
+        position: relative;
     }
 
     &.threed-bottom {
         @extend %threed-side-bottom;
+
+        position: relative;
     }
 }
 
@@ -1349,9 +1348,16 @@ ul.social {
 @mixin content-cube($size) {
     $perspective-multiplier: 2;
 
-    .perspective {
+    main.perspective,
+    header.perspective,
+    footer.perspective {
         perspective: calc($size * $perspective-multiplier);
         perspective-origin: top;
+        transform-style: preserve-3d;
+    }
+
+    .perspective {
+        perspective: calc($size * $perspective-multiplier);
     }
 
     .content-cube {
